# identstr

./: .git-hooks.conf  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: identstr.rs
benches/identstr/: backend.rs  compare.rs  construction.rs  lifecycle.rs  main.rs  maps.rs  read.rs  repeat.rs  unicode.rs
src/: input.rs  key.rs  lib.rs  parse.rs  policy.rs  quote.rs  render.rs  repr.rs  spill.rs  storage.rs
src/unicode/: mod.rs  policy.rs  security.rs
