[package]
name = "identstr"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Immutable identifier strings with preserved quote style and configurable comparison policy."
license = "MIT"
repository = "https://github.com/themixednuts/identstr"
readme = "README.md"
keywords = ["identifier", "case-insensitive", "sql", "unicode"]
categories = ["data-structures", "parser-implementations", "text-processing"]

[features]
default = []
unicode = [
    "dep:caseless",
    "dep:icu_casemap",
    "dep:unicode-normalization",
    "dep:unicode-security",
]

[dependencies]
caseless = { version = "0.2.2", optional = true }
icu_casemap = { version = "2.2.0", optional = true }
unicode-normalization = { version = "0.1.25", optional = true }
unicode-security = { version = "0.1.2", optional = true }

[dev-dependencies]
compact_str = "0.9.0"
criterion = { version = "0.8.2", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
    "plotters",
] }
uncased = "0.9.10"

[[bench]]
name = "identstr"
harness = false
